--- a/index.html
+++ b/index.html
@@ -3,8 +3,40 @@
   <head>
     <meta charset="utf-8">
     <title>Colmar Academy</title>
+    <link href="./resources/css/reset.css" type="text/css" rel="stylesheet" >
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
+
+    <!--Fixed Header w/Navigation-->
+
+     <header>
+       <section id="logo">
+         <img src="./resources/images/ic-logo.svg" alt="company logo"/>
+         <div id="company-name">
+           <span>COLMAR</span>ACADEMY
+         </div>
+       </section>
+       <nav>
+
+       <!--Navigation -->
+
+         <ul role="presentation">
+           <li>
+             <a href="#on-campus"><h5>On Campus</h5><img src="./resources/images/ic-on-campus.svg" alt="classroom desk icon" /></a>
+           </li>
+           <li>
+             <a href="#online"><h5>Online</h5><img src="./resources/images/ic-online.svg" alt="computer icon" /></a>
+           </li>
+           <li>
+             <a href="#companies"><h5>For Companies</h5></a>
+           </li>
+           <li>
+             <a href="#login"><h5>Sign in</h5><img src="./resources/images/ic-login.svg" alt="user login avatar"/></a>
+           </li>
+         </ul>
+       </nav>
+     </header>
 
   </body>
 </html>
