--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
 
-    <!--Fixed Header w/Navigation-->
+    <!--Header/Nav-->
 
      <header>
        <section id="logo">
@@ -19,7 +19,7 @@
        </section>
        <nav>
 
-       <!--Navigation -->
+       <!--Nav -->
 
          <ul role="presentation">
            <li>
@@ -37,6 +37,164 @@
          </ul>
        </nav>
      </header>
+
+     <!--Banner-->
+
+      <section class="jumbotron">
+        <div class="banner"><img src="./resources/images/banner.jpg" alt="image of female students studying at table outside"/></div>
+        <hgroup>
+          <h1>Learn something new everyday</h1>
+          <p>
+            <em>Lorem ipsum dolor sit amet, ea adhuc viris ubique mei.</em>
+          </p>
+          <a href="#start" class="button">Start Here</a>
+        </hgroup>
+      </section>
+
+      <!--Information Overview-->
+
+     <section id="highlights">
+       <feature class="focus">
+         <div class="image">
+           <img src="./resources/images/information-main.jpg" alt="image of a man reading book outside" />
+         </div>
+         <div>
+           <h2>It doesn't hurt to keep practicing</h2>
+           <p>
+             Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+           </p>
+           <p class="reference" aria-label="reference for article">Emanuel, Sr. Strategist at Hiring.com</p>
+         </div>
+       </feature>
+
+       <!-- Article Sidebar -->
+
+        <aside role="presentation">
+          <feature class="story info">
+            <div class="image" aria-label="top view image of students walking on campus path">
+              <img class="desktop" src="./resources/images/information-orientation.jpg" />
+              <img class="mobile" src="./resources/images/information-orientation-mobile.jpg" />
+            </div>
+            <div class="title" role="presentation">
+              <h3>Orientation date</h3>
+              <p>
+                Tue 10/11 & Wed 10/12; 8am-3pm
+              </p>
+              <a href="#article">Read more</a>
+            </div>
+          </feature>
+
+          <feature class="story info">
+            <div class="image" aria-label="image of a campus cafe">
+              <img class="desktop" src="./resources/images/information-campus.jpg" />
+              <img class="mobile" src="./resources/images/information-campus-mobile.jpg" />
+            </div>
+            <div class="title" role="presentation">
+              <h3>Our campus</h3>
+              <p>
+                Find which campus is close by you
+              </p>
+              <a href="#article">Read more</a>
+            </div>
+          </feature>
+
+          <feature class="story info">
+            <div class="image" aria-label="image of a mature male professor">
+              <img class="desktop" src="./resources/images/information-guest-lecture.jpg" />
+              <img class="mobile" src="./resources/images/information-guest-lecture-mobile.jpg" />
+            </div>
+            <div class="title" role="presentation">
+              <h3>Our guest lecture</h3>
+              <p>
+                Join a keynote with Oliver Sack about music in medical treatment.
+              </p>
+              <a href="#article">Read more</a>
+            </div>
+          </feature>
+        </aside>
+      </section>
+
+      <!--Courses-->
+
+      <section id="courses">
+        <h2>Start learning</h2>
+        <div class="program" role="presentation">
+          <a href="#program">
+            <img src="./resources/images/course-software.jpg" alt="image of a computer on a desk"/>
+            <div class="details" aria-label="Detailed course topic list">
+              <h3>Software engineering</h3>
+              <h4>Courses</h4>
+              <p>
+                Web Development, Mobile Development, iOT, APIs
+              </p>
+            </div>
+          </a>
+        </div>
+        <div class="program" role="presentation">
+         <a href="#program">
+           <img src="./resources/images/course-computer-art.jpg" alt="image of smartphone being held in hand"/>
+           <div class="details" aria-label="Detailed course topic list">
+             <h3>Computer art</h3>
+             <h4>Courses</h4>
+             <p>
+               Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation
+             </p>
+           </div>
+         </a>
+       </div>
+
+       <div class="program" role="presentation">
+         <a href="#program">
+         <img src="./resources/images/course-design.jpg" alt="image of student holding camera"/>
+         <div class="details" aria-label="Detailed course topic list">
+           <h3>Design</h3>
+           <h4>Courses</h4>
+           <p>
+             User Experience Design, User Research, Visual Design
+           </p>
+         </div>
+       </a>
+       </div>
+
+       <div class="program" role="presentation">
+         <a href="#program">
+         <img src="./resources/images/course-data.jpg" alt="image of laptop with graphs"/>
+         <div class="details" aria-label="Detailed course topic list">
+           <h3>Data</h3>
+           <h4>Courses</h4>
+           <p>
+             Data Science, Big Data, SQL, Data Visualization
+           </p>
+         </div>
+       </a>
+       </div>
+
+       <div class="program" role="presentation">
+         <a href="#program">
+         <img src="./resources/images/course-business.jpg" alt="image of set up chess board"/>
+         <div class="details" aria-label="Detailed course topic list">
+           <h3>Business</h3>
+           <h4>Courses</h4>
+           <p>
+             Product Development, Business Development, Startup
+           </p>
+         </div>
+       </a>
+       </div>
+
+       <div class="program" role="presentation">
+         <a href="#program">
+         <img src="./resources/images/course-marketing.jpg" alt="image of smart watch on wrist"/>
+         <div class="details" aria-label="Detailed course topic list">
+           <h3>Marketing</h3>
+           <h4>Courses</h4>
+           <p>
+             Analytics, Content Marketing, Mobile Marketing
+           </p>
+         </div>
+       </a>
+       </div>
+     </section>
 
   </body>
 </html>
