--- a/index.html
+++ b/index.html
@@ -196,5 +196,49 @@
        </div>
      </section>
 
+     <!--Thesis -->
+
+     <section id="thesis">
+       <h2>Thesis exhibit</h2>
+
+       <div>
+         <feature class="focus">
+           <video src="./resources/videos/thesis.mp4" preload="metadata" controls="" type="video/mp4">Your browser does not support this Video format</video>
+           <h3>Reimagine urban</h3>
+           <p>
+             Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus.
+           </p>
+         </feature>
+
+
+         <aside>
+           <feature class="story">
+             <div class="image">
+               <img src="./resources/images/thesis-fisma.jpg" alt="image of brainstorm mapping on paper" />
+             </div>
+             <div class="title" role="presentation">
+               <h3>Fisma: Design and Build</h3>
+               <p>
+                 Designer showcase of new prototype product
+               </p>
+             </div>
+           </feature>
+
+           <feature class="story">
+             <div class="image">
+               <img src="./resources/images/thesis-now-and-then.jpg" alt="image of NYC skyline with the Empire State Buidling" />
+             </div>
+             <div class="title" role="presentation">
+               <h3>Now and Then</h3>
+               <p>
+                 Research study about New York
+               </p>
+             </div>
+           </feature>
+         </aside>
+       </div>
+     </section>
+
+
   </body>
 </html>
