--- a/index.html
+++ b/index.html
@@ -239,6 +239,16 @@
        </div>
      </section>
 
+     <!--Footer-->
+           <footer>
+             <section id="copyright">
+               ©2016 Colmar Academy. All rights reserved.
+             </section>
+             <section id="legal">
+               <a href="#terms">Terms</a>
+               <a href="#privacy">Privacy</a>
+             </section>
+           </footer>
 
   </body>
 </html>
